# esp-rust-board-shtc3-mqtt

./: Cargo.toml  README.md  cfg.toml.example
.devcontainer/: devcontainer.json
docs/: README.md
scripts/: flash.sh  run-wokwi.sh
src/: main.rs
