[package]
name = "esp-rust-board-shtc3-mqtt"
version = "0.1.0"
authors = ["Mariusz Jurgielewicz <mordor@mail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["native"]
native = ["esp-idf-sys/native"]

[dependencies]
esp-idf-sys = { version = "0.31.11", features = ["binstart"] }
esp-idf-svc = { version="0.42.5", features = ["experimental", "alloc"] }
esp-idf-hal = "0.38.0"
embedded-svc = "0.22.3"
embedded-hal = "0.2.7"
anyhow = "1"
shtcx = "0.10.0"
toml-cfg = "0.1.3"
log = "0.4.17"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"


[build-dependencies]
embuild = "0.30"
anyhow = "1"
